--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -5,10 +5,9 @@ html
 
     body 
         nav 
-            a(href="/") Home  /
-            a(href="/login") Login  /
-            a(href="/logout") Logout  /
-            a(href="/admin") Admin 
+            a(href="/") Home
+            a(href="/login") Login
+            a(href="/logout") Logout
         
         block content
 
