--- a/src/views/users/show.pug
+++ b/src/views/users/show.pug
@@ -6,3 +6,4 @@ block content
                 li='Apellido: '+ user.primer_apellido
                 li='Segundo apellido: '+ user.segundo_apellido
                 li='Email: '+ user.email
+                a(href="/tutoriales/search") Utilizar buscador
