--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -2,3 +2,5 @@ extends layout
 
 block content
     h1 PROFES SOS
+    div
+        img(src="https://st4.depositphotos.com/1258191/23216/i/450/depositphotos_232163072-stock-photo-senior-authoritarian-professor-yelling-and.jpg", alt="imagen")
