--- a/src/views/users/show.pug
+++ b/src/views/users/show.pug
@@ -1,9 +1,21 @@
-block content 
-    h1 Datos del usuario
-        ul 
-            if user
-                li= 'Nombre: '+ user.nombre
-                li='Apellido: '+ user.primer_apellido
-                li='Segundo apellido: '+ user.segundo_apellido
-                li='Email: '+ user.email
-                a(href="/tutoriales/search") Utilizar buscador
+html 
+    head 
+        title PROFES SOS
+        link(rel="stylesheet" href="../../css/style.css")
+
+    body 
+        nav 
+            a(href="/") Home
+            a(href="/tutoriales/search") Buscar
+            a(href="/tutoriales/misTutos") Mis tutoriales
+            a(href="/login") Login
+            a(href="/logout") Logout
+        h1 Datos del usuario
+            ul 
+                if usuario
+                    li= 'Nombre: '+ usuario.nombre
+                    li='Apellido: '+ usuario.primer_apellido
+                    li='Segundo apellido: '+ usuario.segundo_apellido
+                    li='Email: '+ usuario.email
+        a(href='/users/'+session.user.id+'/edit') Editar perfil
+        a(href="/tutoriales/misTutos") Mis tutoriales
