--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -1,11 +1,13 @@
 html 
     head 
         title PROFES SOS
-    
+        link(rel="stylesheet" href="css/style.css")
 
     body 
         nav 
             a(href="/") Home
+            a(href="/tutoriales/search") Buscar
+            a(href="/tutoriales/misTutos") Mis tutoriales
             a(href="/login") Login
             a(href="/logout") Logout
         
