--- a/src/views/tutoriales/list.pug
+++ b/src/views/tutoriales/list.pug
@@ -1,16 +1,24 @@
-html
-  head
-    title Tutoriales
+html 
+    head 
+        title PROFES SOS
+        link(rel="stylesheet" href="../../css/style.css")
 
-  body
-    a(href="/tutoriales/search") Utilizar buscador
-    a(href="/users/${req.session.user.id}") Mi perfil
-    each tutorial in tutoriales
-      .tutorial
-        h2= tutorial.titulo
-        p= tutorial.descripcion
-        p Tema: #{tutorial.tema}
-        p Autor: #{tutorial.autor}
-        p Total de likes: #{tutorial.totalVotos}
-        button Like
-        hr
+    body 
+        nav 
+            a(href="/") Home
+            a(href="/tutoriales/search") Buscar
+            a(href="/tutoriales/misTutos") Mis tutoriales
+            a(href="/login") Login
+            a(href="/logout") Logout
+        h1 Tutoriales
+        a(href="/tutoriales/search") Utilizar buscador
+        a(href="/users/${req.session.user.id}") Mi perfil
+        each tutorial in tutoriales
+          .tutorial
+            h2= tutorial.titulo
+            p= tutorial.descripcion
+            p Tema: #{tutorial.tema}
+            p Autor: #{tutorial.autor}
+            p Total de likes: #{tutorial.totalVotos}
+            button Like
+            hr
