--- a/src/views/users/edit.pug
+++ b/src/views/users/edit.pug
@@ -1,12 +1,23 @@
-extends ../layout
+html 
+    head 
+        title PROFES SOS
+        link(rel="stylesheet" href="../../css/style.css")
 
-block content 
-    h1 Editar Usuario
-        form(action="/users/${req.session.user.id}", method="post")
-            label(for="nombre") Nombre:
-            input(type="text", name="nombre", id="nombre", value= req.session.user.nombre )
-            label(for="apellido") Apellido:
-            input(type="text", name="apellido", id="apellido", value= req.session.user.apellido )
-            label(for="password") Contraseña del usuario: 
-            input#password.form-control(type="password", name="password", placeholder="Contraseña")
-            input(type="submit", value="guardar")
+    body 
+        nav 
+            a(href="/") Home
+            a(href="/tutoriales/search") Buscar
+            a(href="/tutoriales/misTutos") Mis tutoriales
+            a(href="/login") Login
+            a(href="/logout") Logout
+        h1 Editar Usuario
+            form(action='/users/'+session.user.id, method="post")
+                label(for="nombre") Nombre:
+                input(type="text", name="nombre", id="nombre", value=session.user.nombre )
+                label(for="apellido") Apellido:
+                input(type="text", name="apellido", id="apellido", value=session.user.apellido )
+                label(for="password") Contraseña del usuario: 
+                input(type="password", name="password", placeholder="Contraseña")
+                label(for="passwordConfirm") Confirmar contraseña: 
+                input(type="passwordConfirm", name="passwordConfirm", placeholder="Confirmar contraseña")
+                input(type="submit", value="guardar")
