1 like por tutorial

--- a/src/views/tutoriales/buscador.pug
+++ b/src/views/tutoriales/buscador.pug
@@ -34,7 +34,7 @@ html
                         h2= tutorial.titulo
                     p= tutorial.descripcion
                     p Tema: #{tutorial.nombre_tema}
-                    a(href=tutorial.repositorio)
+                    a(href=tutorial.repositorio, target="_blank")
                         p Repositorio 
                     p Autor: #{tutorial.autor}
                     p Total de likes: #{tutorial.totalVotos}
