--- a/src/views/tutoriales/show.pug
+++ b/src/views/tutoriales/show.pug
@@ -13,7 +13,7 @@ html
         h1 Dale amor
                 h2= nombre
                 p= descripcion
-                a(href=repositorio)
+                a(href=repositorio, target="_blank")
                     p Repositorio 
                 form(action='/tutoriales/'+idTutorial+'/show', method="post")
                     label(for="idTutorial")
