--- a/src/views/users/list.pug
+++ b/src/views/users/list.pug
@@ -8,10 +8,13 @@ html
             a(href="/") Home
             a(href="/tutoriales/search") Buscar
             a(href="/tutoriales/misTutos") Mis tutoriales
-            a(href="/login") Login
-            a(href="/logout") Logout
-        h1 Lista de usuarios
-            ul 
-                each usuario in usuarios
-                    li
-                        a(href='/users/'+usuario.idUsuario)= usuario.nombre +', '+ usuario.apellido+', '+ usuario.email
+            if !session.user
+                a(href="/login") Login
+            else 
+                a(href="/logout") Logout
+        section(id="users")
+            h1 Lista de usuarios
+                ul 
+                    each usuario in usuarios
+                        li
+                            a(href='/users/'+usuario.idUsuario)= usuario.nombre +', '+ usuario.apellido+', '+ usuario.email
