--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,22 +2,24 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f8f3f3;
-    text-align: center;
-
 }
 
 nav {
     background-color: #333;
-    color: white;
+    color: #fff;
     padding: 10px;
     text-align: center;
+    font-size: 1.3em;
 }
 
 nav a {
-    color: white;
-    text-decoration: none;  
+    color: #fff;
+    text-decoration: none;
     margin: 0 10px;
+}
+
+section {
+    padding: 0px 200px 0px 200px;
 }
 
 h1 {
@@ -26,28 +28,87 @@ h1 {
 }
 
 form {
-    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+select, input {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+}
+
+button {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
 }
 
 .tutorial {
-    background-color: white;
+    margin-bottom: 20px;
     border: 1px solid #ccc;
     padding: 10px;
-    margin-bottom: 20px;
 }
 
 .tutorial h2 {
     color: #333;
 }
 
-.error {
-    color: red;
+.tutorial a {
+    text-decoration: none;
+    color: #007bff;
 }
 
-label{
-    margin-left: 25px;
+.tutorial hr {
+    border: none;
+    border-top: 1px solid #ccc;
+    margin-top: 10px;
 }
 
-input {
-    margin-left: 5px;
+
+#home {
+    text-align: center;
+    height: 90%;
+    background-image: url(https://st4.depositphotos.com/1258191/23216/i/450/depositphotos_232163072-stock-photo-senior-authoritarian-professor-yelling-and.jpg);
+    background-size: cover;
+    background-position: center;
+    color: #fff;
+    padding: 100px; 
 }
+    
+
+#users {
+    text-align: center;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+li {
+    margin-bottom: 15px;
+}
+
+#users a {
+    display: block;
+    padding: 10px;
+    background-color: grey;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+#users a:hover {
+    background-color: #0056b3;
+}
+
