--- a/src/views/auth/register.pug
+++ b/src/views/auth/register.pug
@@ -1,20 +1,21 @@
 extends ../layout
 
 block content 
-    h1 Registro 
-    if error 
-        p(class="error")= error
-    form(action="/register", method="post") 
-        label(for="email") Email 
-        input(type="text", name="email", id="email")
-        label(for="nombre") Nombre 
-        input(type="text", name="nombre", id="nombre")
-        label(for="apellido") Apellido 
-        input(type="text", name="apellido", id="apellido")  
-        label(for="password") Contraseña
-        input(type="password", name="password", id="password") 
-        label(for="passwordConfirm") Repetir contraseña 
-        input(type="password", name="passwordConfirm", id="passwordConfirm") 
-        input(type="submit", value="Registrarse")
-    a(href="/login") Login
+    section
+        h1 Registro 
+        if error 
+            p(class="error")= error
+        form(action="/register", method="post") 
+            label(for="email") Email 
+            input(type="text", name="email", id="email")
+            label(for="nombre") Nombre 
+            input(type="text", name="nombre", id="nombre")
+            label(for="apellido") Apellido 
+            input(type="text", name="apellido", id="apellido")  
+            label(for="password") Contraseña
+            input(type="password", name="password", id="password") 
+            label(for="passwordConfirm") Repetir contraseña 
+            input(type="password", name="passwordConfirm", id="passwordConfirm") 
+            input(type="submit", value="Registrarse")
+        a(href="/login") Login
         
